Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7465

False positive memory leak in sanity tests due to iov_iter_get_pages_alloc

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.8.0
    • Lustre 2.8.0
    • 3.16 and later kernels
    • 3
    • 9223372036854775807

      The iov_iter_get_pages_alloc function(introduced by 3.16 kernels, LU-6260) is a kernel function which does not use Lustre's hook to keep track of memory allocation and therefore the number of bytes tallied by Lustre's ll_free_user_pages() appeared to be 'extra'. This happens only to direct io read and it is not a real leak of memory. It can be reproduced by a number of sanity tests, such as 205, to result in the message similar to:

      25243:0:(class_obd.c:646:cleanup_obdclass()) obd_memory max:
      18446744073709549568, leaked: 18446744073709549568

            wc-triage WC Triage
            wang Wally Wang (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: